# See-you-more-than-her

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  hardware_connection.md  mem.md  openclaude.bat  start-claude-proxy.bat  start-claude-proxy.sh  仓库分析文档.md
.gitea/workflows/: a1_ci_runner.yml
.github/workflows/: ci.yml
Aurora-2.0.0-ciciec.14/: MANIFEST.txt  burn_log.txt  release-info.json  temp_move_image.ini
Aurora-2.0.0-ciciec.14/.aurora/: application.toml  logging.toml  runtime.toml
WHEELTEC_C50X_2025.12.26/: Akm_Car.hex  更新记录.txt
WHEELTEC_C50X_2025.12.26/BALANCE/: balance_task.c  data_task.c  show_task.c  uartx_callback.c
WHEELTEC_C50X_2025.12.26/HARDWARE/: buzzer.c
WHEELTEC_C50X_2025.12.26/USER/: WHEELTEC.uvguix.Mayn  WHEELTEC.uvprojx  main.c  system.h
data/A1_SDK_SC132GS/: README.md
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/: CMakeLists.txt  README.md  demo_face.cpp  demo_rps_game.cpp  project_paths.hpp
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/app_assets/: background.ssbmp  car_detour_0.ssbmp  car_detour_1.ssbmp  car_detour_3.ssbmp  car_detour_4.ssbmp  car_detour_5.ssbmp  car_forward_0.ssbmp  car_forward_1.ssbmp  car_forward_2.ssbmp  car_forward_3.ssbmp  car_stop_0.ssbmp  car_stop_1.ssbmp  car_stop_2.ssbmp  hello_bubble.ssbmp  hello_icon.ssbmp  obstacle_alert.ssbmp
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/app_assets/models/: .gitkeep  1cfd4504-c065-4698-9554-9e114f5bfd47_best.m1model
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/cmake_config/: Paths.cmake
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/include/: chassis_controller.hpp  common.hpp  debug_server.hpp  gpio_test_runner.hpp  log.hpp  osd-device.hpp  rps_classifier.hpp  utils.hpp
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/scripts/: run.sh
data/A1_SDK_SC132GS/smartsens_sdk/smart_software/src/app_demo/face_detection/ssne_ai_demo/src/: chassis_controller.cpp  debug_server.cpp  gpio_test_runner.cpp  osd-device.cpp  pipeline_image.cpp  rps_classifier.cpp  scrfd_gray.cpp  utils.cpp  yolov8_detector.cpp  yolov8_gray.cpp
data/yolov8_dataset/: README.md  dataset.yaml
demo-rps/dataprocess_modeltrain/: README.md  export_onnx.py  requirements.txt  (+6 more)
docker/: Dockerfile  docker-compose.yml
docs/: 01_快速上手.md  02_环境搭建.md  03_编译与烧录.md  04_容器操作.md  05_硬件参考.md  06_程序概览.md  07_架构设计.md  08_ROS底盘集成.md  09_AI模型训练.md  10_雷达集成.md  11_常见问题.md  12_项目规划.md  13_贡献指南.md  14_后续开发建议.md  15_AI模型转换与部署.md  16_A1深度感知与点云避障方案.md  17_OSD交互图片准备.md  17_Windows本地快速编译与Docker导出.md  BUILD.md  COMPILATION_AND_BUILD_GUIDE.md  CONTAINER_OPERATION_GUIDE.md  DUAL_BOARD_ARCHITECTURE.md  EVB烧录部署指南.md  GPIO.md  ISSUE_PLAN.md  RPLIDAR_SDK_GUIDE.md  UART.md  X3_PACKAGE_INTEGRATION.md  YOLOV8_TRAINING.md  demo-rps-memory.md  gpio.md  uart驱动.md  中期作品提交要求.md  协作配置指南.md  双板架构设计.md  容器操作手册.md  常见问题.md  快速上手指南.md  接口接线说明.md  新人代码库导读.md  (+5 more)
models/: dataset.yaml
scripts/: a1_sc132gs_build.sh  bootstrap.sh  build_complete_evb.sh  build_connection_test.sh  build_docker.sh  build_incremental.sh  build_ros2_ws.sh  build_src_all.sh  build_verify.sh  build_vision_stack.sh  collect_evb_artifacts.sh  create_submission_zip.sh  install_ros2_jazzy.sh  integrate_x3_packages.sh  package_existing_demo.sh
smartsens_sdk/smart_software/src/ssne_isp_debug/: CMakeLists.txt  README.md  test_copy_yuv8.cpp  test_online_rgb.cpp  test_online_yuv8.cpp
src/a1_connection_test/: CMakeLists.txt  README.md  TROUBLESHOOTING.md  connection_test.cpp
src/a1_connection_test/cmake_config/: Paths.cmake
src/a1_connection_test/include/: chassis_controller.hpp
src/a1_connection_test/scripts/: run.sh
src/a1_connection_test/src/: chassis_controller.cpp
src/a1_ssne_ai_demo/: CMakeLists.txt  README.md  demo_face.cpp  demo_face_drive.cpp  demo_vision.cpp
src/a1_ssne_ai_demo/cmake_config/: Paths.cmake
src/a1_ssne_ai_demo/include/: chassis_controller.hpp  common.hpp  debug_data_interface.hpp  face_drive_app.hpp  lidar_sdk_adapter.hpp  osd-device.hpp  osd_visualizer.hpp  project_flow.hpp  project_paths.hpp  utils.hpp  vision_app.hpp  yolov8_detector.hpp
src/a1_ssne_ai_demo/scripts/: run.sh
src/a1_ssne_ai_demo/src/: chassis_controller.cpp  debug_data_interface.cpp  face_drive_app.cpp  lidar_sdk_adapter.cpp  osd-device.cpp  osd_visualizer.cpp  pipeline_image.cpp  project_flow.cpp  scrfd_gray.cpp  vision_app.cpp  yolov8_detector.cpp
src/ros2_ws/src/a1_robot_stack/: .colcon_ignore  CMakeLists.txt  package.xml
src/ros2_ws/src/a1_robot_stack/include/a1_robot_stack/: fault_utils.hpp
src/ros2_ws/src/a1_robot_stack/include/a1_robot_stack/modules/: depth_perception_module.hpp  frontend_overlay_module.hpp  gesture_yolo_module.hpp  gpio_chassis_bridge.hpp  hdr_switch_module.hpp  obstacle_avoidance_module.hpp  pointcloud_generator_module.hpp  tracking_module.hpp  vision_yolo_module.hpp  yolov8_trainer.hpp
src/ros2_ws/src/a1_robot_stack/launch/: bringup.launch.py  bringup_a1_core.launch.py
src/ros2_ws/src/a1_robot_stack/src/: chassis_controller_node.cpp  display_bridge_node.cpp  lidar_ingest_node.cpp  perception_node.cpp  performance_monitor_node.cpp  safety_supervisor_node.cpp
src/ros2_ws/src/a1_robot_stack/src/modules/: depth_perception_module.cpp  frontend_overlay_module.cpp  gesture_yolo_module.cpp  gpio_chassis_bridge.cpp  hdr_switch_module.cpp  obstacle_avoidance_module.cpp  pointcloud_generator_module.cpp  tracking_module.cpp  vision_yolo_module.cpp  yolov8_trainer.cpp
src/ros2_ws/src/hardware_driver/lidar/rplidar_ros2/: CMakeLists.txt  README.md  package.xml
src/ros2_ws/src/hardware_driver/lidar/rplidar_ros2/config/: rplidar.yaml
src/ros2_ws/src/hardware_driver/lidar/rplidar_ros2/launch/: rplidar_launch.py
src/ros2_ws/src/hardware_driver/lidar/rplidar_ros2/src/: rplidar_ros2_node.cpp
tools/: export-codex-sessions.bat  export-codex-sessions.mjs  testgpio_tests.py
(+331 files in other folders)
