<?xml version="1.0"?>
<package format="3">
  <name>a1_robot_stack</name>
  <version>0.1.0</version>
  <description>ROS2 stack for A1 platform with perception, lidar integration, chassis control, safety, and performance monitoring.</description>
  <maintainer email="dev@example.com">A1 Dev Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
