<?xml version="1.0"?>
<package format="3">
  <name>rplidar_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 driver wrapper for Slamtec RPLIDAR devices using the official RPLIDAR SDK.</description>
  <maintainer email="dev@example.com">A1 Dev Team</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
